--- a/index.html
+++ b/index.html
@@ -137,13 +137,13 @@
 
 
 					          	<!-- PAGES -->
-					          	<li aria-haspopup="true"><a href="#">About</a>
+					          	<li aria-haspopup="true"><a href="#about-5">About</a>
             						
 							    </li>	<!-- END PAGES -->
 
 
 					          	<!-- HALF MENU -->
-					          	<li aria-haspopup="true"><a href="#">Services <span class="wsarrow"></span></a>
+					          	<li aria-haspopup="true"><a href="#services-3">Services <span class="wsarrow"></span></a>
 					            	<div class="wsmegamenu clearfix halfmenu">
 					              		<div class="container-fluid">
 					                		<div class="row">
@@ -179,7 +179,7 @@
 							    </li>	<!-- END MEGAMENU -->
 
 								<!-- MEGAMENU -->
-								<li aria-haspopup="true"><a href="#">Timings</a>
+								<li aria-haspopup="true"><a href="#info-8">Timings</a>
 							    </li>	<!-- END MEGAMENU -->
 
 							    
